Basic CPU graph working hardcoded

--- a/src/main/webapp/graph.conf
+++ b/src/main/webapp/graph.conf
@@ -5,7 +5,8 @@
 		<block for="cpu">
 			<pics lines="cpu_state">
 				<metric>cpu.cpu</metric>
-				{"lines": [{"type_instance": softirq, "label": "Softirq asfa"},  "nice,wait,system,user,idle,interrupt,steal</type_instance>
+				{"lines": [{"type_instance": softirq, "label": "Softirq asfa"}, 
+				 "nice,wait,system,user,idle,interrupt,steal</type_instance>
 				{"unit": "Jetties/sec"}
 				<normalizer>
 				{"graphs": [{"plugin_instance": 0}..1,2]}
